# proc-macro-template

./: Cargo.toml  LICENSE-APACHE  LICENSE-ZLIB  README.md  cargo-generate.toml  cargo_publish.sh  gen_ci.sh  rust-toolchain.toml
examples/: main.rs
src/: _lib.rs  compile_fail_tests.md  lib.rs
src/proc-macro/: Cargo.toml  mod.rs
src/proc_macros/: Cargo.toml  mod.rs
