[package]
name = "{{project-name}}"
authors = [
    "{{authors}}"
]
version = "{{version}}"{% if proc_macros %}  # Keep in sync{% endif %}
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/{{project-name}}.rs"
documentation = "https://docs.rs/{{project-name}}"
readme = "README.md"

# description = "…"
# keywords = []

[features]
better-docs = []  # allowed to break MSRV
ui-tests = ["better-docs"]

[dependencies]
{% if proc_macros %}
[dependencies.{{project-name}}-proc_macros]
path = "src/proc_macros"
version = "{{version}}"  # Keep in sync
{% endif %}
[dev-dependencies]

[workspace]
{% if proc_macros %}members = [
    "src/proc_macros",
]
{% endif %}
[package.metadata.docs.rs]
all-features = true
