# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[package]
name = "{{project-name}}"
authors = [
    "{{authors}}",
]
version = "{{version}}"  # Keep in sync
edition = "2021"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/{{github_user}}/{{project-name}}.rs"
documentation = "https://docs.rs/{{project-name}}"
readme = "README.md"

# description = "…"
# keywords = []

[features]
better-docs = []  # allowed to break MSRV
ui-tests = ["better-docs"]

[dependencies]
{% if proc_macros %}
[dependencies.{{project-name}}-proc_macros]
path = "src/proc_macros"
version = "{{version}}"  # Keep in sync
{% endif %}
[dev-dependencies]

[workspace]
{% if proc_macros %}members = [
    "src/proc_macros",
]
{% endif %}
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
