# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
path = "src/_lib.rs"

[package]
name = "{{project-name}}"
authors = [
    "{{authors}}",
]
version = "{{version}}"  # Keep in sync
edition = "2021"
rust-version = "{{MSRV}}"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/{{github_user}}/{{project-name}}.rs"
documentation = "https://docs.rs/{{project-name}}"
readme = "README.md"

# description = "…"
# keywords = []

[features]
default = [
]

# unstable! Will probably use nightly to improve doc quality
better-docs = []

ui-tests = [
    "better-docs",
]

# `docs-rs` is very similar to `better-docs`, but for it being allowed to enable
# other features as well, often to make sure optional/non-`default` features
# make it to the rendered docs (using `--all-features` instead is not that great).
docs-rs = [
    "better-docs",
]

[dependencies]
{% if proc_macros %}
[dependencies.{{project-name}}-proc_macros]
path = "src/proc_macros"
version = "={{version}}"  # Keep in sync
{% endif %}
[dev-dependencies]

[workspace]
{% if proc_macros %}members = [
    "src/proc_macros",
]
{% endif %}
[package.metadata.docs.rs]
features = [
    "docs-rs",
]
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
