[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "{{crate_name}}_proc-macro"
version = "0.1.0"  # Same as ../../Cargo.toml#package.version
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-hack = "0.5.11"
proc-macro2 = "1.0.*"
quote = "1.0.*"
syn = { version = "1.0.*", features = [
    "full",  # uncomment if not needed
    # "parsing",
]}
