[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "{{project-name}}-proc_macros"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"
]
version = "{{version}}"  # Keep in sync
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/{{project-name}}.rs"
documentation = "https://docs.rs/{{project-name}}"

description = "Internal: proc-macro backend of ::{{crate_name}}."

[dependencies]
proc-macro2.version = "1.0.0"
quote.version = "1.0.0"
syn.version = "1.0.7"  # Access to `receiver()`.
syn.features = [
    "full",
]
