# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
proc-macro = true
path = "_mod.rs"

[package]
name = "{{project-name}}-proc_macros"
authors = [
    "{{authors}}"
]
version = "{{version}}"  # Keep in sync
edition = "2021"
rust-version = "{{MSRV}}"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/{{github_user}}/{{project-name}}.rs"
documentation = "https://docs.rs/{{project-name}}"

description = "Internal: proc-macro backend of ::{{crate_name}}."

[dependencies]
proc-macro2.version = "1.0.0"
quote.version = "1.0.0"
syn.version = "2.0.0"
syn.features = [
    # "full",
]
